--- a/.github/workflows/publish_prod.yml
+++ b/.github/workflows/publish_prod.yml
@@ -18,10 +18,9 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - run: cargo build --release --all-features
-      - name: Publish app
-        uses: cloudflare/wrangler-action@1.3.0
-        with:
-          email: ${{ secrets.CF_ACCOUNT_EMAIL  }}
-          apiKey: ${{ secrets.CF_API_KEY  }}
-          environment: prod
+      - name: Publish
+        env:
+          CF_EMAIL: ${{ secrets.CF_ACCOUNT_EMAIL }}
+          CF_API_KEY: ${{ secrets.CF_API_KEY }}
+        working-directory: some_dir/some_subdir
+        run: npm i @cloudflare/wrangler@1.6.0 && npx wrangler publish --env dev
