--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,7 +10,7 @@ CDN_BACKEND_URL = "https://modrinth-cdn.nyc3.cdn.digitaloceanspaces.com"
 MODRINTH_DOWNLOADERS = "MODRINTH_DOWNLOADERS"
 
 [build]
-command = "cargo install -q worker-build && worker-build --release" # required
+command = "cargo install -q worker-build && worker-build --release"
 
 [build.upload]
 dir = "build/worker"
