--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,4 +22,5 @@ jobs:
         env:
           CF_EMAIL: ${{ secrets.CF_ACCOUNT_EMAIL }}
           CF_API_KEY:  ${{ secrets.CF_API_KEY }}
+          CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
         run: npm i @cloudflare/wrangler@1.6.0 && npx wrangler publish --env dev
