--- a/.github/workflows/publish_prod.yml
+++ b/.github/workflows/publish_prod.yml
@@ -15,3 +15,6 @@ jobs:
           preCommands: wrangler build
           apiToken: ${{ secrets.CF_API_TOKEN }}
           environment: prod
+          secrets: LABRINTH_ADMIN_SECRET
+        env:
+          LABRINTH_ADMIN_SECRET: ${{ secrets.LABRINTH_ADMIN_SECRET_PROD }}
