Setup Miniflare, fix some bugs

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 *~
 target/
 build/
+.mf/
+# since this is only really used for installing miniflare, it would clutter up the repo more than it would help
+node_modules/
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
