--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ default = ["console_error_panic_hook"]
 cfg-if = "0.1.2"
 chrono = "0.4.19"
 futures = "0.3.21"
+http = "0.2.6"
 lazy_static = "1.4.0"
 #serde_json = "1.0.67"
 worker = "0.0.9"
