--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,8 @@ chrono = "0.4.19"
 futures = "0.3.21"
 http = "0.2.6"
 lazy_static = "1.4.0"
-#serde_json = "1.0.67"
+serde = "1.0"
+serde_json = "1.0"
 worker = "0.0.9"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
