--- a/.miniflare.env
+++ b/.miniflare.env
@@ -1,3 +1,3 @@
 # Miniflare testing environment, requires local Labrinth instance running
 LABRINTH_ADMIN_SECRET = feedbeef
-LABRINTH_URL = http://localhost:8000/
+LABRINTH_URL = http://127.0.0.1:8000/
