--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,10 +4,12 @@ workers_dev = true
 compatibility_date = "2022-02-14"
 
 [vars]
-WORKERS_RS_VERSION = "0.0.9"
+WORKERS_RS_VERSION = "0.0.17"
 LABRINTH_URL = "https://api.modrinth.com"
-CDN_BACKEND_URL = "https://modrinth-cdn.nyc3.cdn.digitaloceanspaces.com"
-MODRINTH_DOWNLOADERS = "MODRINTH_DOWNLOADERS"
+CDN_BACKEND_URL = "https://cdn-raw.modrinth.com"
+MODRINTH_DOWNLOADERS_KV = "MODRINTH_DOWNLOADERS"
+LABRINTH_ADMIN_SECRET = "feedbeef"
+RATE_LIMIT_IGNORE_KEY = "feedbeef"
 
 [build]
 command = "cargo install -q worker-build && worker-build --release"
@@ -29,7 +31,7 @@ preview_id = "407d8655c50343ee96a569a2a520f25c"
 [env.dev]
 name = "modrinth-workers-staging"
 
-vars = { LABRINTH_URL = "https://staging-api.modrinth.com", CDN_BACKEND_URL = "https://staging-cdn-raw.modrinth.com", MODRINTH_DOWNLOADERS = "MODRINTH_DEV_DOWNLOADERS", DOWNLOAD_STORAGE_TIME = 360, DOWNLOAD_STORAGE_LIMIT = 5 }
+vars = { LABRINTH_URL = "https://staging-api.modrinth.com", CDN_BACKEND_URL = "https://staging-cdn-raw.modrinth.com", MODRINTH_DOWNLOADERS_KV = "MODRINTH_DEV_DOWNLOADERS", DOWNLOAD_STORAGE_TIME = 360, DOWNLOAD_STORAGE_LIMIT = 5 }
 kv_namespaces = [
     { binding = "MODRINTH_DEV_DOWNLOADERS", id = "407d8655c50343ee96a569a2a520f25c" }
 ]
@@ -37,7 +39,7 @@ kv_namespaces = [
 [env.prod]
 name = "modrinth-workers-prod"
 
-vars = { LABRINTH_URL = "https://api.modrinth.com", CDN_BACKEND_URL = "https://cdn-raw.modrinth.com", MODRINTH_DOWNLOADERS = "MODRINTH_PROD_DOWNLOADERS" }
+vars = { LABRINTH_URL = "https://api.modrinth.com", CDN_BACKEND_URL = "https://cdn-raw.modrinth.com", MODRINTH_DOWNLOADERS_KV = "MODRINTH_PROD_DOWNLOADERS" }
 kv_namespaces = [
     { binding = "MODRINTH_PROD_DOWNLOADERS", id = "b836f7164d5d458c808a82f845d6d0bb" }
 ]
