--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "sisyphus"
 main = "src/index.ts"
 compatibility_date = "2023-10-30"
+account_id = "9ddae624c98677d68d93df6e524a6061"
 
 [vars]
 LABRINTH_URL = "http://127.0.0.1:8000/v2/"
