--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -8,6 +8,10 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v3
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8.6.2
       - name: Deploy app
         uses: cloudflare/wrangler-action@v3
         with:
