--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,6 +5,8 @@ account_id = "9ddae624c98677d68d93df6e524a6061"
 
 [vars]
 LABRINTH_URL = "http://127.0.0.1:8000/v2/"
+LABRINTH_ADMIN_SECRET = "feedbeef"
+RATE_LIMIT_IGNORE_KEY = "feedbeef"
 
 [env.staging.vars]
 LABRINTH_URL = "https://staging-api.modrinth.com/v2/"
