--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -16,6 +16,7 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
+          environment: staging
           command: deploy --env staging
           secrets: |
             LABRINTH_ADMIN_KEY
